src/test/ui/existential_types/unused_generic_param.stderr
error[E0091]: type parameter `T` is unused
  --> $DIR/unused_generic_param.rs:6:35
   |
LL | existential type PartiallyDefined<T>: 'static; //~ `T` is unused
   |                                   ^ unused type parameter

error[E0091]: type parameter `T` is unused
  --> $DIR/unused_generic_param.rs:12:36
   |
LL | existential type PartiallyDefined2<T>: 'static; //~ `T` is unused
   |                                    ^ unused type parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0091`.
